--- a/css/pages/gallery-page.css
+++ b/css/pages/gallery-page.css
@@ -47,21 +47,42 @@ footer {
 }
 
 #modal-display #modal-image {
-    display: fixed;
-    height: 100vh;
-    width: auto;
+    display: block; 
     image-rendering: pixelated;
-    max-width: 80%;
-    max-height: 90%;
+    max-width: 100%;
     margin: auto;
     transition-duration: 100ms;
     transform-origin: 0px 0px 0px;
     background-color: #00000066;
 }
 
+#modal-display #aspect-ratio-container {
+    height: 100vh;
+    max-width: 90%;
+    max-height: 90vh;
+    margin: auto;
+}
+
 @media (max-width: 550px) {
-    #modal-display #modal-image {
+    #modal-display #aspect-ratio-container {
         max-width: 100%;
-        max-height: 90%;
     }
 }
+
+
+
+
+/* 
+div {
+  height: 100vh;
+  max-width:1000px;
+  max-height:100px;
+  aspect-ratio: 3/2;
+}
+section {
+  background-color: red;
+  width: 100%;
+  max-width: 100%;
+  aspect-ratio: 3/2;
+}
+*/
